--- a/MyFirstProjects/Config/DefaultInput.ini
+++ b/MyFirstProjects/Config/DefaultInput.ini
@@ -68,6 +68,7 @@ bEnableLegacyInputScales=True
 bEnableMotionControls=True
 bFilterInputByPlatformUser=False
 bShouldFlushPressedKeysOnViewportFocusLost=True
+bEnableDynamicComponentInputBinding=True
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 bEnableGestureRecognizer=False
@@ -76,6 +77,16 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
++AxisMappings=(AxisName="Horizontal",Scale=-1.000000,Key=Left)
++AxisMappings=(AxisName="Horizontal",Scale=1.000000,Key=Right)
++AxisMappings=(AxisName="Vertical",Scale=1.000000,Key=Up)
++AxisMappings=(AxisName="Vertical",Scale=-1.000000,Key=Down)
++AxisMappings=(AxisName="Horizontal",Scale=-1.000000,Key=Q)
++AxisMappings=(AxisName="Horizontal",Scale=1.000000,Key=D)
++AxisMappings=(AxisName="Vertical",Scale=1.000000,Key=Z)
++AxisMappings=(AxisName="Vertical",Scale=-1.000000,Key=S)
++AxisMappings=(AxisName="Rotation",Scale=-1.000000,Key=A)
++AxisMappings=(AxisName="Rotation",Scale=1.000000,Key=E)
 DefaultPlayerInputClass=/Script/EnhancedInput.EnhancedPlayerInput
 DefaultInputComponentClass=/Script/EnhancedInput.EnhancedInputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
