--- a/MyFirstProjects/Config/DefaultInput.ini
+++ b/MyFirstProjects/Config/DefaultInput.ini
@@ -87,6 +87,8 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="Vertical",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="Rotation",Scale=-1.000000,Key=A)
 +AxisMappings=(AxisName="Rotation",Scale=1.000000,Key=E)
++AxisMappings=(AxisName="BlowUp",Scale=1.000000,Key=B)
++AxisMappings=(AxisName="BlowUp",Scale=-1.000000,Key=N)
 DefaultPlayerInputClass=/Script/EnhancedInput.EnhancedPlayerInput
 DefaultInputComponentClass=/Script/EnhancedInput.EnhancedInputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
