--- a/MyFirstProjects/Config/DefaultInput.ini
+++ b/MyFirstProjects/Config/DefaultInput.ini
@@ -77,18 +77,19 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
-+AxisMappings=(AxisName="Horizontal",Scale=-1.000000,Key=Left)
-+AxisMappings=(AxisName="Horizontal",Scale=1.000000,Key=Right)
-+AxisMappings=(AxisName="Vertical",Scale=1.000000,Key=Up)
-+AxisMappings=(AxisName="Vertical",Scale=-1.000000,Key=Down)
++ActionMappings=(ActionName="Respawn",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Enter)
 +AxisMappings=(AxisName="Horizontal",Scale=-1.000000,Key=Q)
 +AxisMappings=(AxisName="Horizontal",Scale=1.000000,Key=D)
 +AxisMappings=(AxisName="Vertical",Scale=1.000000,Key=Z)
 +AxisMappings=(AxisName="Vertical",Scale=-1.000000,Key=S)
-+AxisMappings=(AxisName="Rotation",Scale=-1.000000,Key=A)
-+AxisMappings=(AxisName="Rotation",Scale=1.000000,Key=E)
++AxisMappings=(AxisName="PitchRotation",Scale=1.000000,Key=Up)
++AxisMappings=(AxisName="PitchRotation",Scale=-1.000000,Key=Down)
 +AxisMappings=(AxisName="BlowUp",Scale=1.000000,Key=B)
 +AxisMappings=(AxisName="BlowUp",Scale=-1.000000,Key=N)
++AxisMappings=(AxisName="Scale",Scale=1.000000,Key=W)
++AxisMappings=(AxisName="Scale",Scale=-1.000000,Key=X)
++AxisMappings=(AxisName="RollRotation",Scale=1.000000,Key=Right)
++AxisMappings=(AxisName="RollRotation",Scale=-1.000000,Key=Left)
 DefaultPlayerInputClass=/Script/EnhancedInput.EnhancedPlayerInput
 DefaultInputComponentClass=/Script/EnhancedInput.EnhancedInputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
