--- a/MyFirstProjects/Config/DefaultInput.ini
+++ b/MyFirstProjects/Config/DefaultInput.ini
@@ -91,6 +91,9 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="Scale",Scale=-1.000000,Key=X)
 +AxisMappings=(AxisName="RollRotation",Scale=1.000000,Key=Right)
 +AxisMappings=(AxisName="RollRotation",Scale=-1.000000,Key=Left)
++AxisMappings=(AxisName="View",Scale=1.000000,Key=MouseY)
++AxisMappings=(AxisName="View",Scale=1.000000,Key=C)
++AxisMappings=(AxisName="View",Scale=-1.000000,Key=V)
 DefaultPlayerInputClass=/Script/EnhancedInput.EnhancedPlayerInput
 DefaultInputComponentClass=/Script/EnhancedInput.EnhancedInputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
