--- a/IceCubeCorrection/Config/DefaultInput.ini
+++ b/IceCubeCorrection/Config/DefaultInput.ini
@@ -84,6 +84,8 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="Horizontal",Scale=-1.000000,Key=Q)
 +AxisMappings=(AxisName="Rotate",Scale=1.000000,Key=Right)
 +AxisMappings=(AxisName="Rotate",Scale=-1.000000,Key=Left)
++AxisMappings=(AxisName="RotatePitch",Scale=1.000000,Key=Up)
++AxisMappings=(AxisName="RotatePitch",Scale=-1.000000,Key=Down)
 DefaultPlayerInputClass=/Script/EnhancedInput.EnhancedPlayerInput
 DefaultInputComponentClass=/Script/EnhancedInput.EnhancedInputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
