--- a/IceCubeCorrection/Config/DefaultInput.ini
+++ b/IceCubeCorrection/Config/DefaultInput.ini
@@ -78,6 +78,10 @@ DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Reset",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
++ActionMappings=(ActionName="Up",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=I)
++ActionMappings=(ActionName="Down",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=K)
++ActionMappings=(ActionName="Right",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=L)
++ActionMappings=(ActionName="left",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=J)
 +AxisMappings=(AxisName="Vertical",Scale=1.000000,Key=Z)
 +AxisMappings=(AxisName="Vertical",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="Horizontal",Scale=1.000000,Key=D)
