--- a/IceCubeCorrection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/IceCubeCorrection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -17,7 +17,7 @@ bSCSEditorShowFloor=False
 bAlwaysBuildUAT=True
 SCSViewportCameraSpeed=4
 AssetViewerProfileName=
-PreviewFeatureLevel=4
+PreviewFeatureLevel=3
 PreviewPlatformName=None
 PreviewShaderFormatName=None
 PreviewShaderPlatformName=None
@@ -160,7 +160,7 @@ MRUItem2=/Game/Level/IceCubeCorection
 LastLevel=/Game/Level/Grid
 
 [ModuleFileTracking]
-IceCubeCorrection.TimeStamp=2023.03.17-14.50.21
+IceCubeCorrection.TimeStamp=2023.03.19-18.54.40
 IceCubeCorrection.LastCompileMethod=Runtime
 StorageServerClient.TimeStamp=2023.03.06-20.56.39
 StorageServerClient.LastCompileMethod=External
@@ -1154,8 +1154,8 @@ NewLevelDialog.TimeStamp=2023.02.23-15.51.06
 NewLevelDialog.LastCompileMethod=Unknown
 GeometryProcessingInterfaces.TimeStamp=2023.03.06-20.56.28
 GeometryProcessingInterfaces.LastCompileMethod=External
-HierarchicalLODUtilities.TimeStamp=2023.02.23-15.51.01
-HierarchicalLODUtilities.LastCompileMethod=Unknown
+HierarchicalLODUtilities.TimeStamp=2023.03.06-20.56.28
+HierarchicalLODUtilities.LastCompileMethod=External
 ExternalImagePicker.TimeStamp=2023.02.23-15.51.00
 ExternalImagePicker.LastCompileMethod=Unknown
 Voice.TimeStamp=2023.03.06-20.56.48
@@ -1360,6 +1360,8 @@ AssetViewerSettings="\"Object\" "
 LitleSpaceShip="\"Object.LitleSpaceShip.position\" "
 LitleSpaceShip_C="\"Object.LitleSpaceShip.position\" "
 Follower="\"Object\" \"Object.Follower.settings\" "
+TimerComponent="\"Object\" "
+GridComponent="\"Object\" \"Object.GridComponent.settings\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=True
@@ -1391,8 +1393,8 @@ AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
 
 [RootWindow]
-ScreenPosition=X=320.000 Y=160.000
-WindowSize=X=1282.000 Y=722.000
+ScreenPosition=X=206.400 Y=22.400
+WindowSize=X=1284.800 Y=724.800
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1409,7 +1411,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../UE_Projects/IceCubeCorrection/Content/Level
+UNR=../../../../../../Users/thibd/OneDrive/Documents/Unreal Projects/IceCubeCorrection/Content/Level
 BRUSH=../../../../UE_Projects/IceCubeCorrection/Content/
 FBX=../../../../UE_Projects/IceCubeCorrection/Content/
 FBXAnim=../../../../UE_Projects/IceCubeCorrection/Content/
@@ -1424,8 +1426,8 @@ Project=D:/UE_5.1/
 
 [Python]
 LastDirectory=
-RecentsFiles=D:/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=D:/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 LoadLevelAtStartup=LastOpened
@@ -2380,6 +2382,48 @@ Follower.Cooking=True
 Follower.Events=True
 FollowerObjectActor_C.Networking=True
 FollowerObjectActor_C.TransformCommon=True
+GridPawnBP_C.Tick=True
+GridPawnBP_C.Pawn=True
+GridPawnBP_C.Camera=True
+GridPawnBP_C.Replication=True
+GridPawnBP_C.Rendering=True
+GridPawnBP_C.Collision=True
+GridPawnBP_C.Actor=True
+GridPawnBP_C.Input=True
+GridPawnBP_C.HLOD=True
+GridPawnBP_C.Physics=True
+GridPawnBP_C.WorldPartition=True
+GridPawnBP_C.Events=True
+GridPawnBP_C.GridPawn=True
+GridPawnBP_C.TransformCommon=True
+GridPawnBP_C.Networking=True
+GridFollowerActorBP_C.GridFollowerActor=True
+GridFollowerActorBP_C.Tick=True
+GridFollowerActorBP_C.Replication=True
+GridFollowerActorBP_C.Rendering=True
+GridFollowerActorBP_C.Collision=True
+GridFollowerActorBP_C.Actor=True
+GridFollowerActorBP_C.Input=True
+GridFollowerActorBP_C.HLOD=True
+GridFollowerActorBP_C.Physics=True
+GridFollowerActorBP_C.WorldPartition=True
+GridFollowerActorBP_C.Events=True
+GridFollowerActorBP_C.TransformCommon=True
+GridFollowerActorBP_C.Networking=True
+TimerComponent.Timer=True
+TimerComponent.TimerComponent=True
+TimerComponent.Tags=True
+TimerComponent.Activation=True
+TimerComponent.Cooking=True
+GridComponent.Variable=True
+GridComponent.Sockets=True
+GridComponent.GridComponent=True
+GridComponent.Tags=True
+GridComponent.ComponentTick=True
+GridComponent.ComponentReplication=True
+GridComponent.Activation=True
+GridComponent.Cooking=True
+GridComponent.Events=True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -2392,8 +2436,9 @@ EditorLoadingSavingSettings=True
 InputSettings=True
 
 [PlacementMode]
-RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
+RecentlyPlaced=/Game/BluePrints/GridFollowerActorBP.GridFollowerActorBP;
 RecentlyPlaced=/Game/BluePrints/FollowerObjectActor.FollowerObjectActor;
+RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Game/BluePrints/LitleSpaceShip.LitleSpaceShip;
 RecentlyPlaced=/Game/BluePrints/SpaceShipPawn.SpaceShipPawn;
 RecentlyPlaced=/Game/BluePrints/FirstPawnBP.FirstPawnBP;
@@ -2405,19 +2450,21 @@ RecentlyPlaced=/Script/IceCubeCorrection.IceCubeActor;
 RecentlyPlaced=/Script/IceCubeCorrection.IceCubeCorrectionGameModeBase;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/BluePrints/FollowerObjectActor
-MRUItem1=/Game/BluePrints/MyShipCorrectionPawn
-MRUItem2=/Game/BluePrints/LitleSpaceShip
-MRUItem3=/Game/BluePrints/SpaceShipPawn
-MRUItem4=/Game/Meshes/source
-MRUItem5=/Game/SpaceShipPawn
-MRUItem6=/Game/Meshes/Material__31_026
-MRUItem7=/Game/Materials/NewMaterial
-MRUItem8=/Game/BluePrints/FirstPawnBP
-MRUItem9=/Game/BluePrints/FirstPawn
-MRUItem10=/Game/MyMyFirstGM
-MRUItem11=/Game/Materials/NewMaterial_Inst
-MRUItem12=/Engine/NewMaterial
+MRUItem0=/Game/BluePrints/GridPawnBP
+MRUItem1=/Game/BluePrints/GridFollowerActorBP
+MRUItem2=/Game/BluePrints/FollowerObjectActor
+MRUItem3=/Game/BluePrints/MyShipCorrectionPawn
+MRUItem4=/Game/BluePrints/LitleSpaceShip
+MRUItem5=/Game/BluePrints/SpaceShipPawn
+MRUItem6=/Game/Meshes/source
+MRUItem7=/Game/SpaceShipPawn
+MRUItem8=/Game/Meshes/Material__31_026
+MRUItem9=/Game/Materials/NewMaterial
+MRUItem10=/Game/BluePrints/FirstPawnBP
+MRUItem11=/Game/BluePrints/FirstPawn
+MRUItem12=/Game/MyMyFirstGM
+MRUItem13=/Game/Materials/NewMaterial_Inst
+MRUItem14=/Engine/NewMaterial
 
 [DetailCategoriesAdvanced]
 PreviewMaterial.Mobile=False
@@ -2441,6 +2488,8 @@ FollowerObjectActor_C.Tick=True
 /Game/BluePrints/LitleSpaceShip.LitleSpaceShip=1
 /Game/BluePrints/MyShipCorrectionPawn.MyShipCorrectionPawn=1
 /Game/BluePrints/FollowerObjectActor.FollowerObjectActor=1
+/Game/BluePrints/GridPawnBP.GridPawnBP=1
+/Game/BluePrints/GridFollowerActorBP.GridFollowerActorBP=1
 
 [MaterialEditor]
 PrimType=1
