--- a/CharacterFllowingEx/Config/DefaultInput.ini
+++ b/CharacterFllowingEx/Config/DefaultInput.ini
@@ -78,6 +78,7 @@ DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
 +ActionMappings=(ActionName="ChangeFollow",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=F)
++ActionMappings=(ActionName="ChangeFollow",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Left)
 +AxisMappings=(AxisName="Vertical",Scale=1.000000,Key=Z)
 +AxisMappings=(AxisName="Vertical",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="Vertical",Scale=1.000000,Key=Gamepad_LeftY)
