--- a/FireBallProject/Config/DefaultInput.ini
+++ b/FireBallProject/Config/DefaultInput.ini
@@ -78,6 +78,8 @@ DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
 +ActionMappings=(ActionName="TridusSpell",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=A)
++ActionMappings=(ActionName="StarfishSpell",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
++ActionMappings=(ActionName="Arcus",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=F)
 +AxisMappings=(AxisName="Vertical",Scale=1.000000,Key=Z)
 +AxisMappings=(AxisName="Rotate",Scale=1.000000,Key=Right)
 +AxisMappings=(AxisName="Vertical",Scale=-1.000000,Key=S)
