--- a/marioCorr/Config/DefaultInput.ini
+++ b/marioCorr/Config/DefaultInput.ini
@@ -80,6 +80,7 @@ DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
++ActionMappings=(ActionName="QuitGame",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Escape)
 +AxisMappings=(AxisName="Verticale",Scale=1.000000,Key=D)
 +AxisMappings=(AxisName="Verticale",Scale=-1.000000,Key=Q)
 DefaultPlayerInputClass=/Script/EnhancedInput.EnhancedPlayerInput
