--- a/marioCorr/Config/DefaultEngine.ini
+++ b/marioCorr/Config/DefaultEngine.ini
@@ -2,6 +2,7 @@
 GameDefaultMap=/Game/Levels/MarioCorr.MarioCorr
 EditorStartupMap=/Game/Levels/MarioCorr.MarioCorr
 GlobalDefaultGameMode="/Script/marioCorr.marioCorrGameMode"
+GameInstanceClass=/Game/BP/MarioGameInstanceBP.MarioGameInstanceBP_C
 
 [/Script/Engine.RendererSettings]
 r.Mobile.ShadingPath=0
