--- a/ToolProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/ToolProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -111,7 +111,7 @@ bPreloadProjectPluginModules=True
 LastLevel=/Game/Levels/ToolLecon
 
 [ModuleFileTracking]
-ToolProject.TimeStamp=2023.12.05-15.58.01
+ToolProject.TimeStamp=2023.12.06-08.02.02
 ToolProject.LastCompileMethod=Runtime
 StorageServerClient.TimeStamp=2023.08.28-08.22.38
 StorageServerClient.LastCompileMethod=Unknown
@@ -1129,6 +1129,8 @@ HierarchicalLODOutliner.TimeStamp=2023.08.28-08.22.35
 HierarchicalLODOutliner.LastCompileMethod=Unknown
 HierarchicalLODUtilities.TimeStamp=2023.08.28-08.22.35
 HierarchicalLODUtilities.LastCompileMethod=Unknown
+NullDrv.TimeStamp=2023.08.28-08.22.36
+NullDrv.LastCompileMethod=Unknown
 
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
@@ -1606,6 +1608,22 @@ StaticMeshComponent.Events=True
 StaticMeshComponent.Materials=True
 SpawnTester_C.TransformCommon=True
 SpawnTester_C.Networking=True
+StaticMeshActor.TransformCommon=True
+StaticMeshActor.StaticMesh=True
+StaticMeshActor.Materials=True
+StaticMeshActor.Physics=True
+StaticMeshActor.Collision=True
+StaticMeshActor.Lighting=True
+StaticMeshActor.Rendering=True
+StaticMeshActor.HLOD=True
+StaticMeshActor.PathTracing=True
+StaticMeshActor.Navigation=True
+StaticMeshActor.VirtualTexture=True
+StaticMeshActor.Tags=True
+StaticMeshActor.Cooking=True
+StaticMeshActor.Replication=True
+StaticMeshActor.Networking=True
+StaticMeshActor.Actor=True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -1767,7 +1785,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/DOME3105/Documents/Unreal Projects/ToolProject/Content/Levels
+UNR=D:/Github/unreal2/ToolProject/Content/Levels
 BRUSH=../../../../../../Users/DOME3105/Documents/Unreal Projects/ToolProject/Content/
 FBX=../../../../../../Users/DOME3105/Documents/Unreal Projects/ToolProject/Content/
 FBXAnim=../../../../../../Users/DOME3105/Documents/Unreal Projects/ToolProject/Content/
